--- a/src/app/form-validation/form-validation.component.html
+++ b/src/app/form-validation/form-validation.component.html
@@ -219,8 +219,7 @@
               </div>
             </div>
 
-            <!-- <button class="btn btn-danger form-control" [disabled]="validationForm.invalid">Submit</button> -->
-            <button class="btn btn-danger form-control">Submit</button>
+            <button class="btn btn-danger form-control" [disabled]="validationForm.invalid">Submit</button>
           </form>
         </div>
         <div class="col-md-5 d-flex">
